[package]
name = "website"
version = "0.0.0"
authors = ["Matthew Jack <matt@mattjack.dev>"]

[dependencies]
comrak = "0.4"
rocket = "0.4.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["handlebars_templates"]

[[bin]]
name = "server"
path = "src/main.rs"
test = false
