[package]
name = "website"
version = "1.0.1"
authors = ["Matthew Jack <matt@mattjack.dev>"]

[dependencies]
comrak = "^0.4"
rocket = "^0.4.1"
serde = { version = "^1.0.91", features = ["derive"] }

[dependencies.rocket_contrib]
version = "^0.4.1"
default-features = false
features = ["handlebars_templates"]

[[bin]]
name = "server"
path = "src/main.rs"
test = false
